Day 11 is completed - U need to search before doing last assignment

--- a/day11/index.html
+++ b/day11/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Day 11</title>
+    <title>Object</title>
   </head>
   <body>
     <h1>Day 11 in JS BootCamp</h1>
+    <p>Object Lesson</p>
     <script src="main.js"></script>
   </body>
 </html>
